# portfolio

./: README.md
Projet02_Entraînez-vous avec SQL et créez votre BDD/: dictionnaire_de_données.xlsx
Projet04_Maintenez et documentez un système de stockage des données sécurisé et performant/: Hyani_Hishem_4_Docker_compose_09_2025.yml  lien.txt  readme.md
Projet05_Anticipez les besoins en consommation de bâtiments/: Hyani_Hishem_1_notebooks.ipynb  bentofile.yaml  pyproject.toml  service.py
Projet08_Modélisez une infrastructure dans le cloud/code pipline ETL/: Readme.md  docker-compose.yml  dockerfile  requirements.txt
Projet08_Modélisez une infrastructure dans le cloud/code pipline ETL/scripts/: consumer.py  producer.py
Projet09_Mettez en place un pipeline d'orchestration des flux/: Hyani_Hishem_2_workflow_022026.yaml  diagrame.drawio
Projet09_Mettez en place un pipeline d'orchestration des flux/output/: CA_par_bouteille.csv  Ordinaires.csv  Premiums.csv  rapport_test.txt
Projet09_Mettez en place un pipeline d'orchestration des flux/scripts/: z_score.py
Projet09_Mettez en place un pipeline d'orchestration des flux/scripts/test_scripts/: analyse_test.py  clean_test.py  jointure_test.py
Projet10_Concevez et déployez un système RAG/: README.md  app.py  pyproject.toml
Projet10_Concevez et déployez un système RAG/script/: data_pre_processing.py  def_load_vector_db.py  test.py  vectorisation_mistral.py
Projet11_Gérez un projet d'infrastructure/: Option_B_2_lien_git_032026.txt
projet01_Analysez les données de systèmes éducatifs/: Hyani_Hishem_1_notebook_082025.ipynb  pyproject.toml
